[package]
name = "domainblock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
ctrlc = "3.4.5"
ndisapi = "0.6.0"
smoltcp = "0.12.0"
trust-dns-resolver = "0.23.2"

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_SystemInformation",
    ]
